<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navHome">

    <fragment
        android:id="@+id/navHome"
        android:name="com.example.admin.andassistant.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_actionHome_to_actionDashboard"
            app:destination="@id/navDashboard" />
        <action
            android:id="@+id/action_actionHome_to_settingsFragment"
            app:destination="@id/navSettings" />

    </fragment>

    <fragment
        android:id="@+id/navSettings"
        android:name="com.example.admin.andassistant.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@xml/app_preferences" />

    <fragment
        android:id="@+id/navDashboard"
        android:name="com.example.admin.andassistant.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navDashboard_to_notesFragment"
            app:destination="@id/notesFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/notesFragment"
        android:name="com.example.admin.andassistant.noteslist.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" >
        <action
            android:id="@+id/action_notesFragment_to_editNoteFragment"
            app:destination="@id/editNoteFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/editNoteFragment"
        android:name="com.example.admin.andassistant.editnote.EditNoteFragment"
        android:label="@string/title_edit_note"
        tools:layout="@layout/fragment_edit_note" />

</navigation>